--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    Hello
-    <div id="box1">
-        box1
-        <div id="box2">box2</div>
-    </div>
-    
+    <h1>Position playground</h1>
+    <div id="box1">box1</div>
+    <div id="box2">box2</div>
+    <div id="box3">box3</div>
+    <div id="box4">box4</div>
 </body>
 </html>
