--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    
     <h1>Position playground</h1>
-    <div id="box1">box1</div>
-    <div id="box2">box2</div>
+    <div id="box1" style="background-color: bisque;">box1</div>
+    <div id="box2" style="background-color:chocolate">box2</div>
     <div id="box3">box3</div>
-    <div id="box4">box4</div>
+    <div id="box4" style="background-color: brown;">box4</div>
+    
 </body>
 </html>
